--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,32 @@
     <link rel="stylesheet" href="./build/tailwind.css"/>
   </head>
   <body class="bg-gray-100 text-slate-800">
-     <header class="w-full bg-white shadow-md text-slate-800 z-10 sticky top-[0.01rem]">
-             <nav class="contianer w-full flex justify-start md:items-center">
+     <header class="w-full bg-white text-slate-800">
+      <!-- Top Header -->
+        <div class="w-full bg-red-400">
+          <p class="container w-full flex justify-center items-center font-bold text-base text-white p-2 border-b-2 border-b-red-700 border-dashed">به فروشگاه آنلاین شوشاین خوش آمدید</p> 
+        </div>
+         <div class="contianer w-full flex justify-between items-center">
+          <!-- MObile Menu Icon -->
+          <div class="block md:hidden" id="MobileNavIcon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-10 h-10 pt-2">
+<path fill-rule="evenodd" d="M3 6.75A.75.75 0 013.75 6h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 6.75zM3 12a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 12zm0 5.25a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75a.75.75 0 01-.75-.75z" clip-rule="evenodd" />
+</svg>
+          </div>
+          <!-- Logo -->
+          <div class="w-full flex flex-1 justify-center items-center">
+            <img src="../assets/images/shoeShineLogo.png" alt="logo" class="object-fill w-32 h-32">
+          </div>
+          <!-- Cart Icon -->
+                   <div class="flex md:hidden">
+                  <a href="cart.html" class="p-2 md:p-3 hover:text-red-500 transition-all ease-in-out duration-700 flex">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8 fill-red-500">
+  <path d="M2.25 2.25a.75.75 0 000 1.5h1.386c.17 0 .318.114.362.278l2.558 9.592a3.752 3.752 0 00-2.806 3.63c0 .414.336.75.75.75h15.75a.75.75 0 000-1.5H5.378A2.25 2.25 0 017.5 15h11.218a.75.75 0 00.674-.421 60.358 60.358 0 002.96-7.228.75.75 0 00-.525-.965A60.864 60.864 0 005.68 4.509l-.232-.867A1.875 1.875 0 003.636 2.25H2.25zM3.75 20.25a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0zM16.5 20.25a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0z" />
+</svg></a>
+                   </div>
+         </div>
+          </header>
+             <nav class="w-full flex justify-start md:items-center shadow-xl z-50 sticky top-0 bg-gray-200 md:border-t-2 md:border-t-gray-700 md:border-dashed mb-4">
                  <!-- Desktop nav -->
                  <div class="hidden md:block" id="MainNav">
                    <ul class="flex items-center" id="MainNavUl">
@@ -35,19 +59,18 @@
 </svg><span>درباره ما</span></a></li>
                   </ul>
                  </div>
-                 <!-- Logo -->
                  <div class="w-full flex md:flex-1 items-center sm:justify-end md:pr-32" id="MainLogo">
-                  <img src="../assets/images/shoeShineLogo.png" alt="logo" class="object-fill w-24 h-24">
+                   <!-- Desktop Cart Icon -->
+                   <div class="hidden md:flex">
+                  <a href="cart.html" class="p-2 md:p-3 hover:text-red-500 transition-all ease-in-out duration-700 flex">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8 fill-red-500">
+  <path d="M2.25 2.25a.75.75 0 000 1.5h1.386c.17 0 .318.114.362.278l2.558 9.592a3.752 3.752 0 00-2.806 3.63c0 .414.336.75.75.75h15.75a.75.75 0 000-1.5H5.378A2.25 2.25 0 017.5 15h11.218a.75.75 0 00.674-.421 60.358 60.358 0 002.96-7.228.75.75 0 00-.525-.965A60.864 60.864 0 005.68 4.509l-.232-.867A1.875 1.875 0 003.636 2.25H2.25zM3.75 20.25a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0zM16.5 20.25a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0z" />
+</svg></a>
+                   </div>
+                 
                  </div>
-                  <!-- Mobile nav -->
-                  <div class="flex md:hidden w-full justify-end"  id="MobileNavIcon">
-                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8 ">
-  <path fill-rule="evenodd" d="M3 6.75A.75.75 0 013.75 6h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 6.75zM3 12a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 12zm0 5.25a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75a.75.75 0 01-.75-.75z" clip-rule="evenodd" />
-</svg>
-
-                  </div>
              </nav>
-     </header>
+    
      <!-- slider -->
      <section class="w-full">
       <div>
@@ -123,9 +146,11 @@
          </div>
          </div>
        </div>
-    <script src="../src/js/db/ProductDB.js"></script>
-    <script src="../src/js/handlers/ProductHandler.js"></script>
+    <script src="../src/js/utils/functionCookies.js"></script>
     <script src="../src/js/models/Product.js"></script>
+    <script src="../src/js/handlers/ProductHandler.js"></script>
+    <script src="../src/js/db/ProductDB.js"></script>
+    <script src="../src/js/db/CartDB.js"></script>
     <script src="../src/js/main.js"></script>
     <script src="../src/js/controler/indexCtrl.js"></script>
   </body>
