add inc and dec and sum price to cart page

--- a/public/singleProduct.html
+++ b/public/singleProduct.html
@@ -204,11 +204,12 @@
             </div>
      </footer>
  <script src="../src/js/utils/functionCookies.js"></script>
+ <script src="../src/js/models/Cart.js"></script>
+ <script src="../src/js/db/CartDB.js"></script>
  <script src="../src/js/models/Product.js"></script>
  <script src="../src/js/handlers/ProductHandler.js"></script>
  <script src="../src/js/db/ProductDB.js"></script>
- <script src="../src/js/db/CartDB.js"></script>
-    <script src="../src/js/main.js"></script>
+  <script src="../src/js/main.js"></script>
     <script src="../src/js/controler/showSingleProduct.js"></script>
   </body>
 </html>
